[package]
name = "sftpclient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
russh = {version = "0.61.2", features = ["ring"], default-features = false}
russh-sftp = "2.3.0"
tokio = {version = "1.52.3", features = ["fs"]}
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
